--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<title></title>
 
 		<!--put your external stylesheet links here-->
-		<link rel="stylesheet" href="lib/leaflet/leaflet.cssstyle">
+		<link rel="stylesheet" href="lib/leaflet/leaflet.css">
 		<link rel="stylesheet" href="css/style.css">
 		<!--[if IE<9]>
 			<link rel="stylesheet" href="css/style.ie.css">
@@ -15,7 +15,10 @@
 
 	<body>
 		<!--put your initial page content here-->
-			
+
+		<!--making the box for the map with id= map-->
+
+			<div id="map"></div>
 		<!--you can also use this space for internal scripts or stylesheets;
 		place these within <script> or <style> tags-->
 
