--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 		<script type="text/javascript" src="lib/jquery-1.12.0.js"></script>
 		<script type="text/javascript" src="lib/leaflet/leaflet.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
-		<script type="text/javascript" src="js/tutorials.js"></script>
+
+		<!-- <script type="text/javascript" src="js/tutorials.js"></script> -->
 	</body>
 </html>
