--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		<!--making the box for the map with id= map-->
 
 			<div id="map"></div>
+			<div id="panel"></div>
 		<!--you can also use this space for internal scripts or stylesheets;
 		place these within <script> or <style> tags-->
 
