--- a/index.html
+++ b/index.html
@@ -19,7 +19,16 @@
 		<!--making the box for the map with id= map-->
 
 			<div id="map"></div>
-			<div id="panel"></div>
+			<div id="panel">
+				<div id="slider">
+
+				</div>
+				<div id="popup-info">hello
+
+				</div>
+
+
+			</div>
 		<!--you can also use this space for internal scripts or stylesheets;
 		place these within <script> or <style> tags-->
 
