--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 		<!--put your external script links here-->
 		<script type="text/javascript" src="lib/jquery-1.12.0.js"></script>
 		<script type="text/javascript" src="lib/leaflet/leaflet.js"></script>
+		<!-- <script type="text/javascript" src="js/choropleth.js"></script> -->
 		<script type="text/javascript" src="js/main.js"></script>
 
 		<!-- <script type="text/javascript" src="js/tutorials.js"></script> -->
