--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
 
 	<body>
 		<!--put your initial page content here-->
-
+		<!-- <svg id="Layer_1" width="180px" height="180px">
+        <circle fill="#F47821" fill-opacity="0.8" stroke="#000000" stroke-miterlimit="10" cx="90" cy="90.001" r="89.5"/>
+    </svg> -->
 		<!--making the box for the map with id= map-->
-
+<h1 id="title">Who Runs the World? Women.</h1>
 			<div id="map"></div>
 			<div id="panel">
 				<div id="slider">
@@ -26,12 +28,14 @@
 				<div id="popup-info">
 
 				</div>
+				<div id="temporal-legend">
 
+				</div>
 
 			</div>
 		<!--you can also use this space for internal scripts or stylesheets;
 		place these within <script> or <style> tags-->
-
+		
 		<!--put your external script links here-->
 		<script type="text/javascript" src="lib/jquery-1.12.0.js"></script>
 		<script type="text/javascript" src="lib/leaflet/leaflet.js"></script>
