--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <circle fill="#F47821" fill-opacity="0.8" stroke="#000000" stroke-miterlimit="10" cx="90" cy="90.001" r="89.5"/>
     </svg> -->
 		<!--making the box for the map with id= map-->
-<h1 id="title">Who Runs the World? Women.</h1>
+<h1 id="title">Shifting the Balance of Power.</h1>
 			<div id="map"></div>
 			<div id="panel">
 				<div id="slider">
@@ -35,7 +35,7 @@
 			</div>
 		<!--you can also use this space for internal scripts or stylesheets;
 		place these within <script> or <style> tags-->
-		
+
 		<!--put your external script links here-->
 		<script type="text/javascript" src="lib/jquery-1.12.0.js"></script>
 		<script type="text/javascript" src="lib/leaflet/leaflet.js"></script>
