--- a/index.html
+++ b/index.html
@@ -23,14 +23,13 @@
 			<div id="map"></div>
 			<div id="panel">
 				<div id="slider">
-
-				</div>
 				<div id="popup-info">
-
+				</div>
+				<div id=context><h3>Women. Finding a Palace in Power.</h3>The United Nations have been pushing for a shift in the balance of power. Issues of Women’s rights in terms of gender balance in leadership roles has been a battle for many years. By mapping Eastern Europe over time, you can see the need for continued empowerment of Women in National decision making and the trend of male dominated polictics.<p>Two of the top for most stable Countries in the World have female leaders: Norway, with Erna Solberg; and Denmark, with Helle Thorning-Schmidt</p>
 				</div>
 				<div id="temporal-legend">
-
 				</div>
+				<div id= "sources"><p>This map was made with data from the World bank.</p></div>
 
 			</div>
 		<!--you can also use this space for internal scripts or stylesheets;
